# bubble-warrior-adventures

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  bubble_warrior_adventures.sln  bwa.sln  config.py  settings.py
assets/backgrounds/: __init__.py
assets/maps/: Locations.txt  castle_exterior.tmx  castle_exterior_resize.tmx  castle_interior_3d.tmx  castle_interior_polygon_walls.tmx  castle_interior_polygon_walls_old.tmx  mine.tmx  ne_tower.tmx  nw_tower.tmx  se_tower.tmx  sw_tower.tmx  world.tmx
assets/scripts/: NPC_dialogue.txt  script.rtf  script.txt  test_config.py  test_tmx.py
assets/sprites/: __init__.py
assets/themes/: __init__.py
bubble_warrior_adventures/: bubble_warrior_adventures.vcxproj  bubble_warrior_adventures.vcxproj.filters  config.lua  main.cpp
bubble_warrior_adventures/src/: game.cpp  game.hpp  main.cpp
bwa/: GameState.hpp  GameStates.hpp  bwa.vcxproj  bwa.vcxproj.filters  config.lua  config.py  packages.config
bwa/assets/: GamePlot.txt  __init__.py  init.lua
bwa/assets/backgrounds/: init.lua
bwa/assets/fonts/: __init__.py  init.lua
bwa/assets/maps/: castle_exterior.tmx  castle_exterior_resize.tmx  castle_interior.lua  castle_interior.tmx  castle_interior_3d..lua  castle_interior_3d.lua  castle_interior_3d.tmx  castle_interior_polygon_walls.tmx  desktop.ini  ne_tower.tmx  nw_tower.tmx  se_tower.tmx  sw_tower.tmx  world.tmx
bwa/assets/scripts/: test_config.py  test_tmx.py
bwa/assets/sprites/: coordinates.txt  init.lua
bwa/assets/themes/: Black.txt  __init__.py  black.conf  init.lua
bwa/dependencies/TGUI-0.7/cmake/Modules/: FindSFML.cmake
bwa/dependencies/TGUI-0.7/doc/html/: Animation_8hpp_source.html  Borders_8hpp_source.html  BoxLayout_8hpp_source.html  Button_8hpp_source.html  Callback_8hpp_source.html  Canvas_8hpp_source.html  ChatBox_8hpp_source.html  CheckBox_8hpp_source.html  ChildWindow_8hpp_source.html  ClickableWidget_8hpp_source.html  Clipboard_8hpp_source.html  Clipping_8hpp_source.html  Color_8hpp_source.html  ComboBox_8hpp_source.html  Config_8hpp_source.html  Container_8hpp_source.html  DataIO_8hpp_source.html  DefaultFont_8hpp_source.html  Deserializer_8hpp_source.html  EditBox_8hpp_source.html  Exception_8hpp_source.html  Font_8hpp_source.html  Global_8hpp_source.html  Grid_8hpp_source.html  Gui_8hpp_source.html  HorizontalLayout_8hpp_source.html  Knob_8hpp_source.html  Label_8hpp_source.html  Layout_8hpp_source.html  ListBox_8hpp_source.html  MenuBar_8hpp_source.html  MessageBox_8hpp_source.html  ObjectConverter_8hpp_source.html  Panel_8hpp_source.html  Picture_8hpp_source.html  ProgressBar_8hpp_source.html  RadioButton_8hpp_source.html  Scrollbar_8hpp_source.html  Serializer_8hpp_source.html  Signal_8hpp_source.html  (+240 more)
bwa/dependencies/TGUI-0.7/doc/html/search/: all_2.js  all_6.js  all_8.js  functions_2.js  functions_6.js  functions_8.js
bwa/dependencies/TGUI-0.7/lib/: tgui.lib
bwa/scripts/: utility.lua
bwa/src/: EntityBase.hpp  FriendlyEntity.cpp  FriendlyEntity.hpp  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  InitState.cpp  InitState.hpp  Main.cpp  MainMenu.cpp  MainMenu.hpp  PlayState.cpp  PlayState.hpp  ResourceCache.hpp  ResourceLoader.hpp  StateHandler.cpp  StateHandler.hpp  TitleScreen.cpp  TitleScreen.hpp  Tmx.cpp  Tmx.hpp  game.cpp  game.hpp  main.cpp  resource.hpp  test.cpp  test.hpp
cmake/Modules/: FindBox2D.cmake
docs/: .~lock.software_requirement_specification.docx#  Software_Requirement_Specification_template_bwa.docx  coordinates.txt  final_project.docx  final_scrum.docx  old_presentation.pptx  presentation.pptx  project_prototype_scrum.docx  project_requirement_specification.docx  script.txt  scrum_protoype_powerpoint.pptx  software_requirement_specification.docx  system_models.docx
powerpoint/: Bubble Warrior Adventures.pptx  Feasibility Study.docx  GamePlot.txt
src/: Animation.cpp  Animation.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  Config.hpp  CreditsScreen.cpp  CreditsScreen.hpp  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  EventQueue.hpp  EventQueue.tpp  Game.cpp  Game.hpp  GameState.cpp  GameState.hpp  Inventory.cpp  Inventory.hpp  InvisibleBarrier.cpp  InvisibleBarrier.hpp  Item.cpp  Item.hpp  Locator.hpp  Locator.tpp  Main.cpp  Map.cpp  Map.hpp  MapHandler.hpp  NPC.cpp  NPC.hpp  Object.cpp  Object.hpp  PlayScreen.cpp  PlayScreen.hpp  PlayState.cpp  PlayState.hpp  Player.cpp  Player.hpp  (+20 more)
